# tll-tls

./: meson.build
.github/workflows/: ci.yml
cert/: ca.key  ca.pem  client.key  client.pem  gen.sh  reject.key  reject.pem  server.key  server.pem
debian/: changelog  control
scheme/: tls-client.h  tls-client.yaml  tls.h  tls.yaml
src/: module.cc  nosignal.c  socket.h  tls.cc  tls.h
src/tll/tls/: bio-nosignal.h
tests/: conftest.py  test_tls.py
